Simpler config system

--- a/configs/server.yaml
+++ b/configs/server.yaml
@@ -1,6 +1,6 @@
 server:
   listenAddress: ":8000"
-  staticDir: "www/public"
+  staticDir: "docs"
   templateDir: "templates"
 
 store:
@@ -10,7 +10,7 @@ store:
 webauthn:
   RPDisplayName: "Gaia-X AISBL"
   RPID: "localhost"
-  RPOrigin: "http://localhost:3000"
-  AuthenticatorAttachment: "platform"
+  RPOrigin: "http://localhost:8000"
+  AuthenticatorAttachment: "cross-platform"
   UserVerification: "required"
 
