--- a/devserver.yaml
+++ b/devserver.yaml
@@ -1,26 +1,33 @@
-# The directory with the source files for the PWA
+# The directory with the source files for the PWA, relative to current directory
 sourcedir: front/src
-# The distribution files after building the app
+
+# The distribution files after building the app, relative to current directory
 targetdir: docs
+
 # If cleantarget is true, erase the 'targetdir' before building
 cleantarget: true
+
 # The individual HTML files composing the application
 # Name is relative to the 'sourcedir'
 htmlfiles:
   - index.html
+
 # The JavaScript files which are the entrypoints (normally included in the HTML files)
 # Name is relative to the 'sourcedir'
 entryPoints:
   - app.js
+
 # The directory whith the source javascipt for the app pages
 # Name relative to 'sourcedir'
 pagedir: /pages
+
 # Directory with files that will be copied to target without any processing
 # ATTENTION: name is relative to the root of the project, not to 'sourcedir'
 # This means that static assets can be located anywhere in the project directory
 staticAssets:
   source: front/src/public
   target: docs
+
 # Set to true if you want entrypoint names to include a hash
 # This includes the pages names
 hashEntrypointNames: false
